# bmt-py

./: .cruft.json  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: build.yml  documentation.yml  draft.yml  labeler.yml  tests.yml
bmt_py/: __init__.py
docs/: binary-merle-tree.md  development.md  index.md
docs/reference/: API.md  Usage.md  bmt_py.md
src/bmt_py/: __init__.py  __version__.py  chunk.py  file.py  span.py  utils.py
tests/: conftest.py  test_add.py
tests/integration/: test_file_integration.py
tests/unit/: test_chunk.py  test_file.py  test_operations.py  test_span.py
